Example app and some doobie and slick fixes

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -20,5 +20,6 @@ rewrite.rules = [
 
 project.git = true
 project.includeFilters = [
-  "modules/.+\\.scala"
+  "modules/.+\\.scala",
+  "example/.+\\.scala"
 ]
